# wan-automation-examples

./: .gitignore  README.md  pyproject.toml
bruno/: README.md
catalystwan/docs/: 01-Getting-Started.md  03-Configuration.md  04-Monitoring-APIs.md  05-alarms.md
catalystwan/docs/monitoring/: approute.md  statistics-interface-aggregated.md  statistics-interface.md
catalystwan/mcp-sdwan/: .dockerignore  .env_example  Containerfile  README.md  build_container.sh  run_mcp_server.sh  sdwan_mcp_server.py
catalystwan/mcp-sdwan/api/: sdwan.py
catalystwan/python/: .env_example  README.md  approute.py  config_group.py  device.py  manager.py  manager_jwt.py  manager_jwt_test.py  profiles.py  settings.py  users.py
catalystwan/python/utilities/: manager.py  tools.py
catalystwan/terraform/: README.md
catalystwan/terraform/model/: config-example.yaml
catalystwan/terraform/module/: config.tf  main.tf
catalystwan/terraform/provider/: config-example.yaml  config-group.tf  config.tf  main.tf  profile_service.tf  profile_system.tf  profile_transport.tf
docs/: 01-Getting-Started.md  02-Authentication.md  alarms.md  approute.md
docs/alarms/: alarms-rulenamedisplay.json  components.json  event-types.json  severity-mapping.json
meraki/python/: meraki_manager.py  network_payload.yaml  networks.py  organization_payload.yaml  organizations.py  parse_yaml_file.py
meraki/terraform/: README.md
meraki/terraform/module/: config.tf  main.tf
meraki/terraform/provider/: config-example.yaml  main.tf  network.tf  organization.tf
(+10 files in other folders)
